# super-spork

./: .gitignore  .gitignore_cmake  BUILD_STATUS.md  CMakeLists.txt  JUCE_EXAMPLES_README.md  MUSIC_TOOLKIT_README.md  Makefile  README.md  haikus.json  index.js  package-lock.json  package.json  server.c  test-modules.js
Source/Assets/: DemoUtilities.h
Source/MidiLogger/: CMakeLists.txt  MidiLogger.h  PluginProcessor.cpp
Source/MultiOutSynth/: CMakeLists.txt  MultiOutSynth.h  PluginProcessor.cpp
Source/NoiseGate/: CMakeLists.txt  NoiseGate.h  PluginProcessor.cpp
Source/ReaperEmbedded/: CMakeLists.txt  PluginProcessor.cpp  ReaperEmbedded.h
Source/SurroundProcessor/: CMakeLists.txt  PluginProcessor.cpp  SurroundProcessor.h
complete-audio-player/: CMakeLists.txt  OVERVIEW.md  QUICKSTART.md  README.md  build.bat  build.sh
complete-audio-player/Source/: Main.cpp  MainComponent.cpp  MainComponent.h
examples/: guitar-examples.js  midi-examples.js  music-theory-examples.js  wav-examples.js
examples/CMake/: CMakeLists.txt
examples/DemoRunner/: CMakeLists.txt
examples/Plugins/: ArpeggiatorPlugin.h
examples/Utilities/: CMakeLists.txt
examples/output/: arpeggio.mid  c_major_scale.mid  chord_progression.mid  drum_pattern.mid  multi_track.mid  rhythm_pattern.mid  simple_melody.mid  simple_song.mid
juce-audio-examples/: README.md
juce-audio-examples/sampler-plugin/: README.md
juce-audio-examples/utils/: AudioPlayerExample.cpp  SamplePlayerUtilities.h  SimpleAudioPlayer.h
juce-audio-examples/wav-loading/: WavLoader.h  WavLoaderExample.cpp
juce-audio-examples/wav-saving/: WavWriter.h  WavWriterExample.cpp
lib/: audio-processor.js  guitar.js  index.js  midi-utils.js  music-theory.js  vocal-patterns.js  wav-utils.js
public/css/: daw.css
public/js/: audio-engine.js  daw.js  effects.js  tutorials.js
views/: daw.ejs
